kube/pihole.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 67
              protocol: UDP
          resources:
            requests:
              cpu: "0.25" # Reserve 0.25 CPU for Pi-hole
              memory: "256Mi" # Reserve 256Mi of memory
            limits:
              cpu: "0.5" # Limit the container to 0.5 CPU
              memory: "512Mi" # Limit the container to 512Mi of memory
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
    - protocol: TCP
      name: dns-tcp
      port: 53
      targetPort: 53
    - protocol: UDP
      name: dns-udp
      port: 53
      targetPort: 53
    - protocol: UDP
      name: dns-dhcp
      port: 67
      targetPort: 67
    - protocol: TCP
      name: http
      port: 9000
      targetPort: 80
