kube/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: combined-route
  namespace: default

spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: whoami
          port: 80
    - match: PathPrefix(`/hellpot`) || PathPrefix(`/wp-login`)
      kind: Rule
      services:
        - name: hellpot
          port: 80
